--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@use '../src/theme.scss' as theme;
+@use '@angular/material' as mat;
 
-html, body { height: 100%; }
+@include mat.all-component-themes(theme.$app-theme);
+
+html, body { height: 100%; background-color: #f5f5f5;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.color-primary-text{
+    color: #000427;
+}
+
+.color-accent-text{
+    color: #fc6200;
+}
