--- a/src/app/home/component/navbar/navbar.component.html
+++ b/src/app/home/component/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
         <span>Bizon</span>
-        <span class="example-spacer"></span>
+        <span class="spacer"></span>
         <nav>
             <button mat-icon-button class="menu-button" [matMenuTriggerFor]="menu">
                 <mat-icon>menu</mat-icon>
