--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+
 <div class="container-fluid">
     <div class="mt-5">
         <div class="row no-gutters bg-home text-dark">
@@ -30,3 +31,5 @@
         </div>
     </div>
 </div>
+
+<app-footer></app-footer>
