--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,79 @@
 <app-navbar-dashboard></app-navbar-dashboard>
 
+<div class="container">
+    <div class="row mt-5 mb-4">
+        <div class="col-12">
+            <mat-card>
+                <mat-card-content class="d-flex flex-wrap justify-content-around">
+                    <button mat-raised-button color="primary" class="text-white">Transferir Dinero</button>
+                    <button mat-raised-button color="accent" class="text-white">Retirar Dinero</button>
+                    <button mat-raised-button color="warn" class="text-white">Agregar Saldo</button>
+                    <button mat-raised-button style="background-color: #004f4f;" class="text-white">Historial de Transacciones</button>
+                    <button mat-raised-button style="background-color: #810081;" class="text-white" [routerLink]="['/view-cvu']">Ver CVU</button>
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-12 d-flex justify-content-between">
+            <div class="flex-grow-1 mr-3">
+                <mat-card class="equal-height">
+                    <mat-card-content class="mt-3">
+                        <h3>¡Hola, {{ name }}!</h3>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+            <div class="flex-grow-1">
+                <mat-card class="equal-height">
+                    <mat-card-content class="d-flex justify-content-between align-items-center">
+                        <span>Saldo: {{ isBalanceVisible ? (balance | currency) : '****' }}</span>
+                        <button mat-icon-button (click)="toggleBalanceVisibility()">
+                            <mat-icon>{{ isBalanceVisible ? 'visibility_off' : 'visibility' }}</mat-icon>
+                        </button>
+                    </mat-card-content>
+                </mat-card>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-3">
+        <div class="col-md-6 col-12 mb-3">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>Últimas Transacciones</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <mat-list>
+                        @for (transaction of transactions; track $index) {
+                        <mat-list-item>
+                            <h3 mat-line>{{ transaction.description }}</h3>
+                            <p mat-line>{{ transaction.date | date }}</p>
+                            <p mat-line>{{ transaction.amount | currency }}</p>
+                        </mat-list-item>
+                        }
+                    </mat-list>
+                </mat-card-content>
+            </mat-card>
+        </div>
+
+        <div class="col-md-6 col-12 mb-3">
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>Estadísticas</mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <canvas id="myChart"></canvas>
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
+</div>
+
+<app-footer></app-footer>
+
+<!-- <app-navbar-dashboard></app-navbar-dashboard>
+
 <div class="container d-flex flex-column align-items-center justify-content-center vh-100">
     <div class="text-center">
         <mat-icon>construction</mat-icon>
@@ -11,4 +85,4 @@
     </div>
 </div>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
