--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,8 +1,35 @@
-h1 {
-    font-size: 2.5rem;
-    font-weight: bold;
+.d-flex {
+    display: flex;
 }
 
-.text-muted {
-    font-size: 1.2rem;
+.flex-grow-1 {
+    flex-grow: 1;
+}
+
+.mr-3 {
+    margin-right: 1rem;
+}
+
+.equal-height {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.mat-card-content {
+    flex: 1;
+}
+
+.mat-card {
+    margin-bottom: 15px;
+}
+
+.mat-card-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+button {
+    margin: 5px;
 }
