Agregando funcionalidades al dashboard

--- a/src/app/dashboard/component/withdraw/withdraw-dialog.component.html
+++ b/src/app/dashboard/component/withdraw/withdraw-dialog.component.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title>Ver CVU</h2>
+<h2 mat-dialog-title>Retirar saldo</h2>
 <mat-dialog-content>
-    <strong>CVU:</strong> 3723498720372349872 <strong>alias:</strong> leandro.deferrari.bz
+    ¡Se ha retirado el saldo correctamente!
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cerrar</button>
