--- a/src/app/dashboard/component/deposit/deposit.component.html
+++ b/src/app/dashboard/component/deposit/deposit.component.html
@@ -1,15 +1,61 @@
 <app-navbar-dashboard-action></app-navbar-dashboard-action>
-  
+
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-12 text-center">
+      <h1>Agregar saldo</h1>
+    </div>
+  </div>
+  <!--     <mat-stepper linear #stepper>
+      <mat-step [stepControl]="firstFormGroup" [editable]="isEditable">
+        <form [formGroup]="firstFormGroup">
+          <ng-template matStepLabel>Tipo</ng-template>
+          <mat-form-field>
+            <mat-label>Name</mat-label>
+            <input matInput formControlName="firstCtrl" placeholder="Efectivo" required>
+          </mat-form-field>
+          <div>
+            <button mat-button matStepperNext>Siguiente</button>
+          </div>
+        </form>
+      </mat-step>
+      <mat-step [stepControl]="secondFormGroup" [editable]="isEditable">
+        <form [formGroup]="secondFormGroup">
+          <ng-template matStepLabel>Monto</ng-template>
+          <mat-form-field>
+            <mat-label>monto</mat-label>
+            <input matInput type="number" formControlName="secondCtrl" placeholder="100$ mínimo" required>
+          </mat-form-field>
+          <div>
+            <button mat-button matStepperPrevious>Volver</button>
+            <button mat-button matStepperNext>Siguiente</button>
+          </div>
+        </form>
+      </mat-step>
+      <mat-step>
+        <ng-template matStepLabel>Hecho</ng-template>
+        <p>Tipo: {{firstFormGroup.get('firstCtrl')?.value}}</p>
+        <p>Monto: {{secondFormGroup.get('secondCtrl')?.value}}$</p>
+        <div>
+          <button mat-button matStepperPrevious>Volver</button>
+          <button mat-button (click)="stepper.reset()">Reiniciar</button>
+          <button mat-button (click)="stepper.reset()">Listo</button>
+        </div>
+      </mat-step>
+    </mat-stepper>   -->
   <mat-stepper linear #stepper>
     <mat-step [stepControl]="firstFormGroup" [editable]="isEditable">
       <form [formGroup]="firstFormGroup">
-        <ng-template matStepLabel>Fill out your name</ng-template>
+        <ng-template matStepLabel>Tipo</ng-template>
         <mat-form-field>
-          <mat-label>Name</mat-label>
-          <input matInput formControlName="firstCtrl" placeholder="Last name, First name" required>
+          <mat-label>Tipo</mat-label>
+          <mat-select formControlName="firstCtrl" required>
+            <mat-option value="Efectivo">Efectivo</mat-option>
+            <!-- Puedes agregar más opciones aquí si es necesario -->
+          </mat-select>
         </mat-form-field>
         <div>
-          <button mat-button matStepperNext>Next</button>
+          <button mat-button matStepperNext>Siguiente</button>
         </div>
       </form>
     </mat-step>
@@ -17,9 +63,8 @@
       <form [formGroup]="secondFormGroup">
         <ng-template matStepLabel>Monto</ng-template>
         <mat-form-field>
-          <mat-label>monto</mat-label>
-          <input matInput formControlName="secondCtrl" placeholder="100 min"
-                 required>
+          <mat-label>Monto</mat-label>
+          <input matInput type="number" formControlName="secondCtrl" placeholder="100$ mínimo" required>
         </mat-form-field>
         <div>
           <button mat-button matStepperPrevious>Volver</button>
@@ -30,12 +75,14 @@
     <mat-step>
       <ng-template matStepLabel>Hecho</ng-template>
       <p>Tipo: {{firstFormGroup.get('firstCtrl')?.value}}</p>
-      <p>Monto: {{secondFormGroup.get('secondCtrl')?.value}}</p>
+      <p>Monto: {{secondFormGroup.get('secondCtrl')?.value}}$</p>
       <div>
         <button mat-button matStepperPrevious>Volver</button>
         <button mat-button (click)="stepper.reset()">Reiniciar</button>
+        <button mat-button (click)="stepper.reset()">Listo</button>
       </div>
     </mat-step>
-  </mat-stepper>  
+  </mat-stepper>
+</div>
 
 <app-footer></app-footer>
