--- a/src/app/dashboard/component/withdraw/withdraw.component.html
+++ b/src/app/dashboard/component/withdraw/withdraw.component.html
@@ -1,14 +1,52 @@
 <app-navbar-dashboard-action></app-navbar-dashboard-action>
 
-<div class="container d-flex flex-column align-items-center justify-content-center vh-100">
-    <div class="text-center">
-        <mat-icon>construction</mat-icon>
-        <h1 class="mt-3">En construcción</h1>
-        <p class="text-muted">Estamos trabajando duro para terminarlo lo antes posible. ¡Vuelva pronto!</p>
-        <button mat-raised-button color="primary" class="mt-2" [routerLink]="['/home']">
-            <mat-icon>home</mat-icon> Volver al Inicio
-        </button>
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1>Retirar saldo</h1>
+        </div>
     </div>
+
+    <mat-stepper linear #stepper>
+        <mat-step [stepControl]="firstFormGroup" [editable]="isEditable">
+            <form [formGroup]="firstFormGroup">
+                <ng-template matStepLabel>Tipo</ng-template>
+                <mat-form-field>
+                    <mat-label>Tipo</mat-label>
+                    <mat-select formControlName="firstCtrl" required>
+                        <mat-option value="Efectivo">Efectivo</mat-option>
+                        <!-- Puedes agregar más opciones aquí si es necesario -->
+                    </mat-select>
+                </mat-form-field>
+                <div>
+                    <button mat-button matStepperNext>Siguiente</button>
+                </div>
+            </form>
+        </mat-step>
+        <mat-step [stepControl]="secondFormGroup" [editable]="isEditable">
+            <form [formGroup]="secondFormGroup">
+                <ng-template matStepLabel>Monto</ng-template>
+                <mat-form-field>
+                    <mat-label>Monto</mat-label>
+                    <input matInput type="number" formControlName="secondCtrl" placeholder="100$ mínimo" required>
+                </mat-form-field>
+                <div>
+                    <button mat-button matStepperPrevious>Volver</button>
+                    <button mat-button matStepperNext>Siguiente</button>
+                </div>
+            </form>
+        </mat-step>
+        <mat-step>
+            <ng-template matStepLabel>Hecho</ng-template>
+            <p>Tipo: {{firstFormGroup.get('firstCtrl')?.value}}</p>
+            <p>Monto: {{secondFormGroup.get('secondCtrl')?.value}}$</p>
+            <div>
+                <button mat-button matStepperPrevious>Volver</button>
+                <button mat-button (click)="stepper.reset()">Reiniciar</button>
+                <button mat-button (click)="openDialog()">Listo</button>
+            </div>
+        </mat-step>
+    </mat-stepper>
 </div>
 
 <app-footer></app-footer>
