--- a/src/app/dashboard/dashboard-dialog-cvu.component.html
+++ b/src/app/dashboard/dashboard-dialog-cvu.component.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title>Retirar saldo</h2>
+<h2 mat-dialog-title>Ver CVU</h2>
 <mat-dialog-content>
-    ¡Se ha retirado el saldo correctamente!
+    <strong>CVU:</strong> {{cvu}} <strong>alias:</strong> {{alias}}
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cerrar</button>
