--- a/src/app/dashboard/component/navbar-dashboard-action/navbar-dashboard-action.component.html
+++ b/src/app/dashboard/component/navbar-dashboard-action/navbar-dashboard-action.component.html
@@ -7,11 +7,11 @@
                 <mat-icon>menu</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-                <button mat-button [routerLink]="['home']">Inicio</button>
-                <button mat-button>Acerca de</button>
-                <button mat-button>Contacto</button>
-                <button mat-button [routerLink]="['/dashboard']">Dashboard</button>
-                <button mat-button (click)="logout()">Cerrar Sesión</button>
+                <button mat-menu-item [routerLink]="['home']">Inicio</button>
+                <button mat-menu-item>Acerca de</button>
+                <button mat-menu-item>Contacto</button>
+                <button mat-menu-item [routerLink]="['/dashboard']">Dashboard</button>
+                <button mat-menu-item (click)="logout()">Cerrar Sesión</button>
             </mat-menu>
         </nav>
         <div class="d-lg-flex d-none">
