--- a/src/app/dashboard/component/transactions/transactions.component.html
+++ b/src/app/dashboard/component/transactions/transactions.component.html
@@ -1,50 +1,36 @@
 <app-navbar-dashboard-action></app-navbar-dashboard-action>
 
-<!-- <div class="container d-flex flex-column align-items-center justify-content-center vh-100">
-    <div class="text-center">
-        <mat-icon>construction</mat-icon>
-        <h1 class="mt-3">En construcción</h1>
-        <p class="text-muted">Estamos trabajando duro para terminarlo lo antes posible. ¡Vuelva pronto!</p>
-        <button mat-raised-button color="primary" class="mt-2" [routerLink]="['/home']">
-            <mat-icon>home</mat-icon> Volver al Inicio
-        </button>
-    </div>
-</div> -->
-
 <div class="container-fuild">
     <div class="row mt-4">
         <div class="col-12 text-center">
             <h1>Historial de transacciones</h1>
         </div>
     </div>
+
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 mt-2">
-                    <!-- Position Column -->
+                <table mat-table [dataSource]="transactions" class="mat-elevation-z8 mt-2">
                     <ng-container matColumnDef="position">
                         <th mat-header-cell *matHeaderCellDef> No. </th>
                         <td mat-cell *matCellDef="let element"> {{element.position}} </td>
                     </ng-container>
-                
-                    <!-- Name Column -->
+
                     <ng-container matColumnDef="description">
                         <th mat-header-cell *matHeaderCellDef> Descripción </th>
                         <td mat-cell *matCellDef="let element"> {{element.description}} </td>
                     </ng-container>
-                
-                    <!-- Weight Column -->
+
                     <ng-container matColumnDef="date">
                         <th mat-header-cell *matHeaderCellDef> Fecha </th>
                         <td mat-cell *matCellDef="let element"> {{element.date}} </td>
                     </ng-container>
-                
-                    <!-- Symbol Column -->
+
                     <ng-container matColumnDef="amount">
                         <th mat-header-cell *matHeaderCellDef> Monto </th>
                         <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
                     </ng-container>
-                
+
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table>
@@ -52,6 +38,5 @@
         </div>
     </div>
 </div>
-
 
 <app-footer></app-footer>
