--- a/src/app/dashboard/component/withdraw/withdraw.component.html
+++ b/src/app/dashboard/component/withdraw/withdraw.component.html
@@ -8,14 +8,13 @@
     </div>
 
     <mat-stepper linear #stepper>
-        <mat-step [stepControl]="firstFormGroup" [editable]="isEditable">
-            <form [formGroup]="firstFormGroup">
+        <mat-step [stepControl]="firstStepFormGroup" [editable]="isEditable">
+            <form [formGroup]="firstStepFormGroup">
                 <ng-template matStepLabel>Tipo</ng-template>
                 <mat-form-field>
                     <mat-label>Tipo</mat-label>
-                    <mat-select formControlName="firstCtrl" required>
+                    <mat-select formControlName="type" required>
                         <mat-option value="Efectivo">Efectivo</mat-option>
-                        <!-- Puedes agregar más opciones aquí si es necesario -->
                     </mat-select>
                 </mat-form-field>
                 <div>
@@ -23,12 +22,13 @@
                 </div>
             </form>
         </mat-step>
-        <mat-step [stepControl]="secondFormGroup" [editable]="isEditable">
-            <form [formGroup]="secondFormGroup">
+
+        <mat-step [stepControl]="secondStepFormGroup" [editable]="isEditable">
+            <form [formGroup]="secondStepFormGroup">
                 <ng-template matStepLabel>Monto</ng-template>
                 <mat-form-field>
                     <mat-label>Monto</mat-label>
-                    <input matInput type="number" formControlName="secondCtrl" placeholder="100$ mínimo" required>
+                    <input matInput type="number" formControlName="amount" placeholder="100$ mínimo">
                 </mat-form-field>
                 <div>
                     <button mat-button matStepperPrevious>Volver</button>
@@ -36,10 +36,11 @@
                 </div>
             </form>
         </mat-step>
+
         <mat-step>
             <ng-template matStepLabel>Hecho</ng-template>
-            <p>Tipo: {{firstFormGroup.get('firstCtrl')?.value}}</p>
-            <p>Monto: {{secondFormGroup.get('secondCtrl')?.value}}$</p>
+            <p>Tipo: {{firstStepFormGroup.get('type')?.value}}</p>
+            <p>Monto: {{secondStepFormGroup.get('amount')?.value}}$</p>
             <div>
                 <button mat-button matStepperPrevious>Volver</button>
                 <button mat-button (click)="stepper.reset()">Reiniciar</button>
