--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,11 +5,16 @@
         <div class="col-12">
             <mat-card>
                 <mat-card-content class="d-flex flex-wrap justify-content-around">
-                    <button mat-raised-button color="primary" class="text-white" [routerLink]="['/transfer']">Transferir Dinero</button>
-                    <button mat-raised-button color="accent" class="text-white" [routerLink]="['/withdraw']">Retirar Dinero</button>
-                    <button mat-raised-button color="warn" class="text-white" [routerLink]="['/deposit']">Agregar Saldo</button>
-                    <button mat-raised-button style="background-color: #004f4f;" class="text-white" [routerLink]="['/transactions']">Historial de Transacciones</button>
-                    <button mat-raised-button (click)="openDialog()" style="background-color: #810081;" class="text-white">Ver CVU</button>
+                    <button mat-raised-button color="primary" class="text-white" [routerLink]="['/transfer']">Transferir
+                        Dinero</button>
+                    <button mat-raised-button color="accent" class="text-white" [routerLink]="['/withdraw']">Retirar
+                        Dinero</button>
+                    <button mat-raised-button color="warn" class="text-white" [routerLink]="['/deposit']">Agregar
+                        Saldo</button>
+                    <button mat-raised-button style="background-color: #004f4f;" class="text-white"
+                        [routerLink]="['/transactions']">Historial de Transacciones</button>
+                    <button mat-raised-button (click)="openDialog()" style="background-color: #810081;"
+                        class="text-white">Ver CVU</button>
                 </mat-card-content>
             </mat-card>
         </div>
@@ -24,6 +29,7 @@
                     </mat-card-content>
                 </mat-card>
             </div>
+            
             <div class="flex-grow-1">
                 <mat-card class="equal-height">
                     <mat-card-content class="d-flex justify-content-between align-items-center">
@@ -47,7 +53,8 @@
                     <mat-list>
                         @for (transaction of transactions; track $index) {
                         <mat-list-item>
-                            <p mat-line> {{ transaction.description }} Fecha: {{ transaction.date | date }} Monto: {{ transaction.amount | currency }}</p>
+                            <p mat-line> {{ transaction.description }} Fecha: {{ transaction.date | date }} Monto: {{
+                                transaction.amount | currency }}</p>
                         </mat-list-item>
                         }
                     </mat-list>
@@ -60,7 +67,7 @@
                 <mat-card-header>
                     <mat-card-title>Estadísticas</mat-card-title>
                 </mat-card-header>
-                
+
                 <mat-card-content class="text-center">
                     <canvas id="myChart"></canvas>
                 </mat-card-content>
@@ -70,18 +77,3 @@
 </div>
 
 <app-footer></app-footer>
-
-<!-- <app-navbar-dashboard></app-navbar-dashboard>
-
-<div class="container d-flex flex-column align-items-center justify-content-center vh-100">
-    <div class="text-center">
-        <mat-icon>construction</mat-icon>
-        <h1 class="mt-3">En construcción</h1>
-        <p class="text-muted">Estamos trabajando duro para terminarlo lo antes posible. ¡Vuelva pronto!</p>
-        <button mat-raised-button color="primary" class="mt-2" [routerLink]="['/home']">
-            <mat-icon>home</mat-icon> Volver al Inicio
-        </button>
-    </div>
-</div>
-
-<app-footer></app-footer> -->
