--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,8 @@
                 </section>
             </div>
             <div class="col-12 col-md-6 overflow-hidden pe-0">
-                <img src="../../assets/icon/logo.jpg" alt="Image" class="img-fluid ml-md-auto d-block h-100 diagonal-cut">
+                <img src="../../assets/icon/logo.jpg" alt="Image"
+                    class="img-fluid ml-md-auto d-block h-100 diagonal-cut">
             </div>
         </div>
     </div>
