--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,6 +16,7 @@
                                 }
                             </mat-form-field>
                         </div>
+
                         <div class="form-group mb-4">
                             <mat-form-field appearance="fill" class="w-100">
                                 <mat-label>Contraseña</mat-label>
@@ -32,12 +33,14 @@
                                 }
                             </mat-form-field>
                         </div>
+
                         <mat-divider class="mb-2"></mat-divider>
                         <div class="form-group mb-2 d-flex justify-content-center">
-                            <button mat-icon-button color="primary" [routerLink]="['/']">
+                            <button mat-icon-button color="primary" [routerLink]="['/home']">
                                 <mat-icon>home</mat-icon>
                             </button>
                         </div>
+                        
                         @if (loginForm.invalid) {
                         <button type="submit" mat-raised-button color="primary" class="w-100" disabled>Iniciar
                             Sesión</button>
