--- a/src/app/dashboard/component/transactions/transactions.component.html
+++ b/src/app/dashboard/component/transactions/transactions.component.html
@@ -28,7 +28,8 @@
 
                     <ng-container matColumnDef="amount">
                         <th mat-header-cell *matHeaderCellDef> Monto </th>
-                        <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+                        <td mat-cell *matCellDef="let element"> {{element.amount | currency:'ARS':'symbol':'1.2-2' }}
+                        </td>
                     </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
