--- a/src/app/dashboard/component/withdraw/dashboard-dialog-withdraw.component.html
+++ b/src/app/dashboard/component/withdraw/dashboard-dialog-withdraw.component.html
@@ -39,7 +39,7 @@
 }
 @else {
 <mat-dialog-content>
-  ¡Se ha retirado saldo correctamente!
+  ¡Se ha retirado el saldo exitosamente!
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cerrar</button>
