--- a/src/app/dashboard/component/deposit/dashboard-dialog-deposit.component.html
+++ b/src/app/dashboard/component/deposit/dashboard-dialog-deposit.component.html
@@ -39,7 +39,7 @@
 }
 @else {
 <mat-dialog-content>
-  ¡Se ha agregado saldo correctamente!
+  ¡Se ha agregado el saldo exitosamente!
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cerrar</button>
