--- a/src/app/dashboard/component/transactions/transactions.component.html
+++ b/src/app/dashboard/component/transactions/transactions.component.html
@@ -12,23 +12,23 @@
             <div class="col-12">
                 <table mat-table [dataSource]="transactions" class="mat-elevation-z8 mt-2">
                     <ng-container matColumnDef="position">
-                        <th mat-header-cell *matHeaderCellDef> No. </th>
-                        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                        <th mat-header-cell *matHeaderCellDef class="text-center"> No. </th>
+                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.position}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="description">
-                        <th mat-header-cell *matHeaderCellDef> Descripción </th>
-                        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                        <th mat-header-cell *matHeaderCellDef class="text-center"> Descripción </th>
+                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.description}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="date">
-                        <th mat-header-cell *matHeaderCellDef> Fecha </th>
-                        <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+                        <th mat-header-cell *matHeaderCellDef class="text-center"> Fecha </th>
+                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.date | date: 'dd-MM-YYY hh:mm:ss a'}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="amount">
-                        <th mat-header-cell *matHeaderCellDef> Monto </th>
-                        <td mat-cell *matCellDef="let element"> {{element.amount | currency:'ARS':'symbol':'1.2-2' }}
+                        <th mat-header-cell *matHeaderCellDef class="text-center"> Monto </th>
+                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.amount | currency:'ARS':'symbol':'1.2-2' }}
                         </td>
                     </ng-container>
 
