--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,16 +24,22 @@
         <div class="col-12 d-flex justify-content-between">
             <div class="flex-grow-1 mr-3">
                 <mat-card class="equal-height">
+                    <mat-card-header>
+                        <mat-card-title>Bienvenido</mat-card-title>
+                    </mat-card-header>
                     <mat-card-content class="mt-3">
-                        <h3>¡Hola, {{ name }}!</h3>
+                        <h3>¡Hola, {{ user?.nombre }}!</h3>
                     </mat-card-content>
                 </mat-card>
             </div>
 
             <div class="flex-grow-1">
                 <mat-card class="equal-height">
+                    <mat-card-header>
+                        <mat-card-title>Saldo</mat-card-title>
+                    </mat-card-header>
                     <mat-card-content class="d-flex justify-content-between align-items-center">
-                        <span>Saldo: {{ isBalanceVisible ? (balance | currency:'ARS':'symbol':'1.2-2') : '********'
+                        <span>{{ isBalanceVisible ? (balance | currency:'ARS':'symbol':'1.2-2') : '********'
                             }}</span>
                         <button mat-icon-button (click)="toggleBalanceVisibility()">
                             <mat-icon>{{ isBalanceVisible ? 'visibility_off' : 'visibility' }}</mat-icon>
@@ -51,20 +57,33 @@
                     <mat-card-title>Últimas Transacciones</mat-card-title>
                 </mat-card-header>
                 <mat-card-content>
-                    <mat-list>
-                        @for (transaction of transactions; track $index) {
-                        <mat-list-item>
-                            <p mat-line class="text-center justify-content-center"> {{ transaction.description }} Fecha:
-                                {{ transaction.date | date: 'dd-MM-YYY'}} Monto: {{
-                                transaction.amount | currency:'ARS':'symbol':'1.2-2' }}</p>
-                        </mat-list-item>
-                        }
-                        @empty {
-                        <mat-list-item>
-                            <p mat-line>No hay transacciones</p>
-                        </mat-list-item>
-                        }
-                    </mat-list>
+                    <div class="table-responsive">
+                        <table class="table text-center">
+                            <thead>
+                                <tr>
+                                    <th scope="col">N°</th>
+                                    <th scope="col">Descripción</th>
+                                    <th scope="col">Fecha</th>
+                                    <th scope="col">Monto</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @for (transaction of transactions; track $index) {
+                                <tr>
+                                    <th scope="row">{{$index + 1}}</th>
+                                    <td>{{transaction.description}}</td>
+                                    <td>{{transaction.date | date: 'dd-MM-YYY'}}</td>
+                                    <td>{{transaction.amount | currency:'ARS':'symbol':'1.2-2'}}</td>
+                                </tr>
+                                }
+                                @empty {
+                                <tr>
+                                    <p>No hay transacciones</p>
+                                </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </mat-card-content>
             </mat-card>
         </div>
@@ -74,9 +93,12 @@
                 <mat-card-header>
                     <mat-card-title>Estadísticas</mat-card-title>
                 </mat-card-header>
-
-                <mat-card-content class="text-center">
-                    <canvas id="myChart"></canvas>
+                <mat-card-content class="mt-5">
+                    <div class="text-center">
+                        <mat-icon>construction</mat-icon>
+                        <h1 class="mt-2">En construcción</h1>
+                        <p class="text-muted">Estamos trabajando duro para terminarlo lo antes posible</p>
+                    </div>
                 </mat-card-content>
             </mat-card>
         </div>
