--- a/src/app/dashboard/component/deposit/dashboard-dialog-deposit.component.html
+++ b/src/app/dashboard/component/deposit/dashboard-dialog-deposit.component.html
@@ -1,6 +1,5 @@
-<h2 mat-dialog-title class="mb-0">Agregar saldo</h2>
 @if (!isDeposited) {
-<mat-dialog-content>
+<mat-dialog-content class="mt-2">
   <mat-card class="example-card shadow-sm" appearance="outlined">
     <mat-card-header>
       <mat-card-title-group class="align-items-center">
@@ -38,6 +37,7 @@
 </mat-dialog-actions>
 }
 @else {
+<h2 mat-dialog-title class="mb-0">Agregar saldo</h2>
 <mat-dialog-content>
   ¡Se ha agregado el saldo exitosamente!
 </mat-dialog-content>
