--- a/src/app/dashboard/component/transactions/transactions.component.html
+++ b/src/app/dashboard/component/transactions/transactions.component.html
@@ -23,12 +23,14 @@
 
                     <ng-container matColumnDef="date">
                         <th mat-header-cell *matHeaderCellDef class="text-center"> Fecha </th>
-                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.date | date: 'dd-MM-YYY hh:mm:ss a'}} </td>
+                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.date | date: 'dd-MM-YYYY
+                            HH:mm:ss'}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="amount">
                         <th mat-header-cell *matHeaderCellDef class="text-center"> Monto </th>
-                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.amount | currency:'ARS':'symbol':'1.2-2' }}
+                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.amount |
+                            currency:'ARS':'symbol':'1.2-2' }}
                         </td>
                     </ng-container>
 
