--- a/src/app/dashboard/component/withdraw/withdraw.component.html
+++ b/src/app/dashboard/component/withdraw/withdraw.component.html
@@ -14,6 +14,12 @@
                 <mat-form-field>
                     <mat-label>Monto</mat-label>
                     <input matInput type="number" formControlName="amount" placeholder="1000$ mínimo">
+                    @if (stepFormGroup.get('amount')?.hasError('required')) {
+                    <mat-error>El monto es requerido</mat-error>
+                    }
+                    @if (stepFormGroup.get('amount')?.hasError('min')) {
+                    <mat-error>El monto mínimo es 1.000 ARS</mat-error>
+                    }
                 </mat-form-field>
                 <div>
                     <button mat-button matStepperNext>Siguiente</button>
@@ -23,7 +29,8 @@
 
         <mat-step>
             <ng-template matStepLabel>Hecho</ng-template>
-            <p>Monto: {{stepFormGroup.get('amount')?.value | currency:'ARS':'symbol':'1.2-2'}}</p>
+            <p><strong class="me-2">Monto:</strong> <mat-chip>{{stepFormGroup.get('amount')?.value |
+                    currency:'ARS':'symbol':'1.2-2'}}</mat-chip></p>
             <div>
                 <button mat-button matStepperPrevious>Volver</button>
                 <button mat-button (click)="stepper.reset()">Reiniciar</button>
