--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
                         <mat-card-title>Bienvenido</mat-card-title>
                     </mat-card-header>
                     <mat-card-content class="mt-3">
-                        <h3>¡Hola, {{ user?.nombre }}!</h3>
+                        <h3>¡Hola, {{ user?.nombre }} {{user?.apellido}}!</h3>
                     </mat-card-content>
                 </mat-card>
             </div>
@@ -72,7 +72,7 @@
                                 <tr>
                                     <th scope="row">{{$index + 1}}</th>
                                     <td>{{transaction.description}}</td>
-                                    <td>{{transaction.date | date: 'dd-MM-YYY'}}</td>
+                                    <td>{{transaction.date | date: 'dd-MM-YYYY HH:mm:ss'}}</td>
                                     <td>{{transaction.amount | currency:'ARS':'symbol':'1.2-2'}}</td>
                                 </tr>
                                 }
