--- a/src/app/dashboard/component/deposit/dashboard-dialog-deposit.component.html
+++ b/src/app/dashboard/component/deposit/dashboard-dialog-deposit.component.html
@@ -39,7 +39,12 @@
 @else {
 <h2 mat-dialog-title class="mb-0">Agregar saldo</h2>
 <mat-dialog-content>
+  @if(!hasError){
   ¡Se ha agregado el saldo exitosamente!
+  }
+  @else {
+  Ocurrió un error, vuelva a intentarlo más tarde
+  }
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cerrar</button>
