--- a/src/app/dashboard/component/transactions/transactions.component.html
+++ b/src/app/dashboard/component/transactions/transactions.component.html
@@ -6,38 +6,35 @@
             <h1>Historial de transacciones</h1>
         </div>
     </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <table mat-table [dataSource]="transactions" class="mat-elevation-z8 mt-2">
-                    <ng-container matColumnDef="position">
-                        <th mat-header-cell *matHeaderCellDef class="text-center"> No. </th>
-                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.position}} </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="description">
-                        <th mat-header-cell *matHeaderCellDef class="text-center"> Descripción </th>
-                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.description}} </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="date">
-                        <th mat-header-cell *matHeaderCellDef class="text-center"> Fecha </th>
-                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.date | date: 'dd-MM-YYYY
-                            HH:mm:ss'}} </td>
-                    </ng-container>
-
-                    <ng-container matColumnDef="amount">
-                        <th mat-header-cell *matHeaderCellDef class="text-center"> Monto </th>
-                        <td mat-cell *matCellDef="let element" class="text-center"> {{element.amount |
-                            currency:'ARS':'symbol':'1.2-2' }}
-                        </td>
-                    </ng-container>
-
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                </table>
-            </div>
+    <div class="container-fluid">
+        <div class="table-responsive">
+            <table mat-table [dataSource]="transactions" class="mat-elevation-z8 mt-2">
+                <ng-container matColumnDef="description">
+                    <th mat-header-cell *matHeaderCellDef class="text-center"> Descripción </th>
+                    <td mat-cell *matCellDef="let element" class="text-center"> {{element.descripcion}} </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="date">
+                    <th mat-header-cell *matHeaderCellDef class="text-center"> Fecha </th>
+                    <td mat-cell *matCellDef="let element" class="text-center"> {{element.fecha | date: 'dd-MM-YYYY HH:mm:ss'}} </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="amount">
+                    <th mat-header-cell *matHeaderCellDef class="text-center"> Monto </th>
+                    <td mat-cell *matCellDef="let element" class="text-center"> {{element.monto |
+                        currency:'ARS':'symbol':'1.2-2' }}
+                    </td>
+                </ng-container>
+        
+                <ng-container matColumnDef="category">
+                    <th mat-header-cell *matHeaderCellDef class="text-center"> Categoría </th>
+                    <td mat-cell *matCellDef="let element" class="text-center"> {{element.categoria }}
+                    </td>
+                </ng-container>
+        
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
         </div>
     </div>
 </div>
