--- a/src/app/dashboard/component/transfer/dashboard-dialog-transfer.component.html
+++ b/src/app/dashboard/component/transfer/dashboard-dialog-transfer.component.html
@@ -14,7 +14,12 @@
 @else {
 <h2 mat-dialog-title class="mb-0">Transferir saldo</h2>
 <mat-dialog-content>
+  @if(!hasError){
   ¡Se ha transferido el saldo exitosamente!
+  }
+  @else {
+  {{messageError}}
+  }
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cerrar</button>
