--- a/src/app/dashboard/component/withdraw/dashboard-dialog-withdraw.component.html
+++ b/src/app/dashboard/component/withdraw/dashboard-dialog-withdraw.component.html
@@ -39,7 +39,12 @@
 @else {
 <h2 mat-dialog-title class="mb-0">Retirar saldo</h2>
 <mat-dialog-content>
+  @if(!hasError){
   ¡Se ha retirado el saldo exitosamente!
+  }
+  @else {
+  Ocurrió un error, vuelva a intentarlo más tarde
+  }
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cerrar</button>
