--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -39,7 +39,7 @@
                         <mat-card-title>Saldo</mat-card-title>
                     </mat-card-header>
                     <mat-card-content class="d-flex justify-content-between align-items-center">
-                        <span>{{ isBalanceVisible ? (balance | currency:'ARS':'symbol':'1.2-2') : '********'
+                        <span>{{ isBalanceVisible ? (balance | currency:'ARS':'symbol':'1.2-2') : '************'
                             }}</span>
                         <button mat-icon-button (click)="toggleBalanceVisibility()">
                             <mat-icon>{{ isBalanceVisible ? 'visibility_off' : 'visibility' }}</mat-icon>
@@ -71,9 +71,9 @@
                                 @for (transaction of transactions; track $index) {
                                 <tr>
                                     <th scope="row">{{$index + 1}}</th>
-                                    <td>{{transaction.description}}</td>
-                                    <td>{{transaction.date | date: 'dd-MM-YYYY HH:mm:ss'}}</td>
-                                    <td>{{transaction.amount | currency:'ARS':'symbol':'1.2-2'}}</td>
+                                    <td>{{transaction.descripcion}}</td>
+                                    <td>{{transaction.fecha | date: 'dd-MM-YYYY HH:mm:ss'}}</td>
+                                    <td>{{transaction.monto | currency:'ARS':'symbol':'1.2-2'}}</td>
                                 </tr>
                                 }
                                 @empty {
