--- a/src/app/dashboard/component/transfer/dashboard-dialog-transfer.component.html
+++ b/src/app/dashboard/component/transfer/dashboard-dialog-transfer.component.html
@@ -3,7 +3,7 @@
   <mat-card class="example-card shadow-lg" appearance="outlined">
     <mat-card-content class="d-flex justify-content-center align-items-center">
       <img mat-card-sm-image class="img-fluid" style="width: 200px; height: 200px;"
-        src="https://res.cloudinary.com/dy7gwan0n/image/upload/v1718759410/bank_finance_cash_dollar_purchase_money_transfer_buy_emtaby.svg">
+        src="https://res.cloudinary.com/dy7gwan0n/image/upload/v1718759410/bank_finance_cash_dollar_purchase_money_transfer_buy_emtaby.svg" alt="Logo de transferencia">
     </mat-card-content>
   </mat-card>
 </mat-dialog-content>
