--- a/src/app/dashboard/component/deposit/dashboard-dialog-deposit.component.html
+++ b/src/app/dashboard/component/deposit/dashboard-dialog-deposit.component.html
@@ -8,7 +8,8 @@
           <mat-chip><em>Sin costo</em></mat-chip>
         </mat-card-subtitle>
         <img mat-card-sm-image
-          src="https://res.cloudinary.com/dy7gwan0n/image/upload/v1718735105/PagoFacil_LOGO_Cuadrado_q3mbjy.svg">
+          src="https://res.cloudinary.com/dy7gwan0n/image/upload/v1718735105/PagoFacil_LOGO_Cuadrado_q3mbjy.svg"
+          alt="Logo Pago Fácil">
       </mat-card-title-group>
     </mat-card-header>
     <mat-card-content class="mt-3">
